kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  labels:
    route53: dashboard
spec:
  rules:
    - host: "dashboard.zgamelogic.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 3000
  tls:
    - hosts:
        - "dashboard.zgamelogic.com"
      secretName: ingress-tls
